# QKD_power

./: .gitignore  .gitignore.save  False.txt  Large_new.txt  Large_result.txt  Plot_Tokyo_Power.py  Plot_Tokyo_Spectrum.py  Plot_result.py  Plot_sub.py  Plot_tau_dsp.py  Process_Graph.py  Tokyo_result.txt  True.txt  ana.txt  ana2.txt  autonomous_search.py  bo_optimization_large_parallel.db  bo_optimize.py  bypass_training_log.txt  capacity.txt  cases  comparison_result.json  config.py  debug_power.py  final_optimal_results.json  log.txt  log_Large_BB84_APD_Low_Bypass_False.txt  log_Large_BB84_APD_Low_Bypass_True.txt  log_Paris_BB84_APD_High_Bypass_False.txt  log_Paris_BB84_APD_High_Bypass_True.txt  log_Paris_BB84_APD_Low_Bypass_False.txt  log_Paris_BB84_APD_Low_Bypass_True.txt  log_Paris_BB84_APD_Medium_Bypass_False.txt  log_Paris_BB84_APD_Medium_Bypass_True.txt  log_Paris_BB84_SNSPD_High_Bypass_False.txt  log_Paris_BB84_SNSPD_High_Bypass_True.txt  log_Paris_BB84_SNSPD_Low_Bypass_False.txt  log_Paris_BB84_SNSPD_Low_Bypass_True.txt  log_Paris_BB84_SNSPD_Medium_Bypass_False.txt  log_Paris_BB84_SNSPD_Medium_Bypass_True.txt  (+45 more)
QEnergy/: .pylintrc  LICENSE  Makefile  README.md  matplotlibrc  pyproject.toml
QEnergy/qenergy/: __init__.py  experiments.py  experiments_cv.py  experiments_dv.py  py.typed  skr_cv.py
QEnergy/studies/: __init__.py  all_to_all.py  bb84_detector.py  bb84_qber.py  bb84_wavelength.py  cka.py  cka_dist.py  cv_vs_dv.py  cvcka.py  cvqkd.py  energy_efficiency.py  key_rate_compute.py  measured_values.py  piecharts.py  plot_QKD_keyrate.py  power_compute.py  (+2 more)
(+99 files in other folders)
