[tool.poetry]
name = "qenergy"
version = "0.1.0"
description = "A toolbox for computing the cost of quantum communication protocols"
authors = [
    "Raja Yehia <Raja.Yehia@icfo.eu>",
    "Yoann Piétri <Yoann.Pietri@lip6.fr>",
    "Carlos Pascual <Carlos.Pascual@icfo.eu>",
    "Pascal Lefebvre <Pascal.Lefebvre@lip6.fr>",
    "Federico Centrone <Federico.Centrone@icfo.eu>",
]
readme = "README.md"
packages = [{ include = "qenergy" }, { include = "qenergy/py.typed" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
numba = "^0.59.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.1.0"
sphinx = "^7.2.6"
mypy = "^1.9.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^4.0.0"
sphinx-prompt = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
